# Scanlink

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: scan_and_connect.rs
src/: camera.rs  lib.rs  main.rs  qr_scanner.rs
src/wifi/: connector.rs  credentials.rs  linux_network_manager.rs  mod.rs  parser.rs
