[package]
name = "scanlink"
version = "0.1.0"
edition = "2024"
description = "Scan QR payloads and use parsed connection data with pluggable network backends."
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomSmarts/Scanlink"
readme = "README.md"
homepage = "https://github.com/randomSmarts/Scanlink"
documentation = "https://docs.rs/scanlink"
keywords = ["qr", "wifi", "networkmanager", "onboarding", "connectivity"]
categories = ["network-programming", "command-line-utilities"]
exclude = [
  ".vscode/",
  "Cargo.toml.orig",
  "camera_preview.png",
  "rust-qr-venv/",
  "target/",
  "Cargo.lock"
]

[features]
default = []

qr = ["dep:image", "dep:nokhwa", "dep:zedbar"]
wifi = ["dep:regex"]
linux-network-manager = ["wifi"]

[dependencies]
image = { version = "0.25", optional = true }
nokhwa = { version = "0.10", features = ["input-native"], optional = true } # input-native means the OS natural camera
zedbar = { version = "0.4.1", optional = true }
regex = { version = "1", optional = true }

[[example]]
name = "scan_and_connect"
required-features = ["qr", "linux-network-manager"]

exclude = [
  ".vscode/",
  "Cargo.toml.orig",
  "camera_preview.png",
  "rust-qr-venv/",
  "target/",
  "Cargo.lock"
]